// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ShippingAddressesDropdown/> should display \`No results\` when shippingAddresses = [] & snapshot should render \`Select from address book...\` 1`] = `
<div>
  <label
    class="ui-label-label-a11c label"
  >
    Shipping address
    <abbr
      aria-label="required"
      class="ui-label-abbr-a11c"
      title="required"
    >
      *
    </abbr>
  </label>
  <div
    class="flex"
  >
    <div
      class="dropdown"
      id="shipping-address-dropdown"
    >
      <div
        aria-invalid="false"
        class="wrapper"
        role="combobox"
        tabindex="0"
      >
        <div
          class="inputWrapper isFocused"
        >
          <div
            class="input isGreyed"
          >
            Select from address book...
          </div>
          <i
            class="affix suffix toggle material-icons"
          >
            arrow_drop_down
          </i>
        </div>
      </div>
    </div>
    <button
      aria-disabled="false"
      class="ui-button-wrapper-cef1 ml-2 wrapper ui-button-fill-cef1 ui-button-secondary-cef1"
      type="button"
    >
      <span
        class="ui-button-content-cef1"
      >
        <i
          class="material-icons icon"
        >
          add
        </i>
      </span>
    </button>
    <div />
  </div>
</div>
`;

exports[`<ShippingAddressesDropdown/> snapshot renders the selected shipping address instead of \`Select from address book...\` 1`] = `
<div>
  <label
    class="ui-label-label-a11c label"
  >
    Shipping address
    <abbr
      aria-label="required"
      class="ui-label-abbr-a11c"
      title="required"
    >
      *
    </abbr>
  </label>
  <div
    class="flex"
  >
    <div
      class="dropdown"
      id="shipping-address-dropdown"
    >
      <div
        aria-invalid="false"
        class="wrapper"
        role="combobox"
        tabindex="0"
      >
        <div
          class="inputWrapper"
        >
          <div
            class="input"
          >
            A Test 2, Random Street 19, 507051 Paris, Paris, FR, France
          </div>
          <i
            class="affix suffix toggle material-icons"
          >
            arrow_drop_down
          </i>
        </div>
      </div>
    </div>
    <button
      aria-disabled="false"
      class="ui-button-wrapper-cef1 ml-2 wrapper ui-button-fill-cef1 ui-button-secondary-cef1"
      type="button"
    >
      <span
        class="ui-button-content-cef1"
      >
        <i
          class="material-icons icon"
        >
          add
        </i>
      </span>
    </button>
    <div />
  </div>
</div>
`;
